# orianna

./: .gitignore  CMakeLists.txt  Makefile  TODO.md  cmake_install.cmake  compile_commands.json
include/: bits.txt  bitsets.hpp  board.hpp  game.hpp  lookup_tables.hpp  move.hpp
src/: board.cpp  game.cpp  main.cpp  move.cpp
